src/yn00_compile.log
yn00_parra.c: In function 'DistanceMatLWL85':
yn00_parra.c:305:13: error: implicit declaration of function 'DistanceLWL85'; did you mean 'DistanceMatLWL85'? [-Wimplicit-function-declaration]
  305 |             DistanceLWL85(is, js, &S, &N, &dS, &dN, &SEdS, &SEdN, &t);
      |             ^~~~~~~~~~~~~
      |             DistanceMatLWL85
yn00_parra.c: In function 'CompareMethodsParallel':
yn00_parra.c:363:13: error: assignment to 'struct <anonymous> ***' from incompatible pointer type 'void ***' [-Wincompatible-pointer-types]
  363 |     results = (void***)malloc(com.ns * sizeof(void**));
      |             ^
yn00_parra.c:365:21: error: assignment to 'struct <anonymous> **' from incompatible pointer type 'void **' [-Wincompatible-pointer-types]
  365 |         results[is] = (void**)malloc(com.ns * sizeof(void*));
      |                     ^
yn00_parra.c:398:21: error: implicit declaration of function 'DistanceNG86'; did you mean 'DistanceF84'? [-Wimplicit-function-declaration]
  398 |                     DistanceNG86(is, js, &results[is][js][1].S, &results[is][js][1].N,
      |                     ^~~~~~~~~~~~
      |                     DistanceF84
yn00_parra.c: In function 'main':
yn00_parra.c:512:5: error: implicit declaration of function 'GetSeq'; did you mean 'GetFreqs'? [-Wimplicit-function-declaration]
  512 |     GetSeq(stdin, &com.z, &com.spname, &com.ns, &com.ls, 1);
      |     ^~~~~~
      |     GetFreqs
yn00_parra.c:514:21: error: implicit declaration of function 'error'; did you mean 'zerror'? [-Wimplicit-function-declaration]
  514 |     if (com.ns < 2) error("Need at least 2 sequences");
      |                     ^~~~~
      |                     zerror
yn00_parra.c:519:12: error: implicit declaration of function 'gfopen'; did you mean 'fopen'? [-Wimplicit-function-declaration]
  519 |     fout = gfopen(com.outf, "w");
      |            ^~~~~~
      |            fopen
yn00_parra.c:519:10: error: assignment to 'FILE *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  519 |     fout = gfopen(com.outf, "w");
      |          ^
yn00_parra.c:534:41: error: implicit declaration of function 'etime'; did you mean 'stime'? [-Wimplicit-function-declaration]
  534 |     printf("Time used: %.2f seconds\n", etime());
      |                                         ^~~~~
      |                                         stime
